--- a/assets/css/home-page-styles.css
+++ b/assets/css/home-page-styles.css
@@ -21,7 +21,7 @@ body::before {
 }
 
 .s-menu {
-    padding: 1.6rem 0;
+    padding: 2rem 0;
     width: 100%;
     text-align: center;
 
@@ -33,6 +33,22 @@ body::before {
     vertical-align: middle;
     text-transform: uppercase;
     margin: 0 2rem;
+
+    position: relative;
+ 
+}
+
+
+.s-menu__item:hover:not(:nth-child(3))::before {
+    content: '';
+    border: 2px solid #FFF;
+    border-radius: 50%;
+    display: block;
+
+    position: absolute;
+    bottom: -.5rem;
+    left: 50%;
+
 }
 
 .s-menu__icon {
@@ -86,51 +102,6 @@ body::before {
     transition: bottom 1s ease-in-out;
 }
 
-.s-controller {
-    position: relative;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 4.8rem;
-}
-
-.s-controller__button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-size: 1.6rem;
-    font-weight: 700;
-
-    width: 4rem;
-    height: 4rem;
-
-    background-color: var(--primary-color);
-    border: 2px solid #FFF;
-    border-radius: 50%;
-
-    cursor: pointer;
-    z-index: 1;
-
-    transition: transform ease .2s;
-}
-
-.s-controller__button:hover {
-    transform: scale(1.1);
-}
-
-.s-controller__button:nth-child(2) {
-    margin-inline: 6rem;
-}
-
-.s-controller__line {
-    width: 50%;
-    height: 2px;
-
-    background-color: #FFF;
-    position: absolute;
-}
 
 /* Hover Animation */
 .s-card--hovered .s-card__background {
@@ -147,6 +118,7 @@ body::before {
 .s-card--hovered .s-card__title {
     bottom: 50%;
 }
+
 
 body#spider-man-01--hovered::before {
     background-image: url('../img/pic-sm-bg-01.jpg');
